fix stuck facet error

--- a/primo-explore/custom/OSU/css/custom1.css
+++ b/primo-explore/custom/OSU/css/custom1.css
@@ -142,4 +142,6 @@ html#primoExploreRoot body primo-explore.__lgPlus.__gt-xs.__gt-sm.__gt-md div pr
     display: none;
 }
 
+#facets > prm-facet > div { z-index: 0 !important; }
+
 /* End Primo fixes */ 
